bk_ida/gobmkida/g3/getopt_internal
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:981:1: error: use of undeclared identifier '$58E8A322B99FFF983766F42E1DE15117'
$58E8A322B99FFF983766F42E1DE15117 v10; // r12d 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:1062:1: error: use of undeclared identifier 'v10'
v10 = RETURN_IN_ORDER; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:1068:1: error: use of undeclared identifier 'v10'
v10 = REQUIRE_ORDER; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:1074:1: error: use of undeclared identifier 'v10'
v10 = REQUIRE_ORDER; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:1079:1: error: use of undeclared identifier 'v10'
v10 = PERMUTE; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:1081:1: error: use of undeclared identifier '_getopt_initialized'; did you mean '__getopt_initialized'?
_getopt_initialized = 1; 
^~~~~~~~~~~~~~~~~~~
__getopt_initialized
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:132:5: note: '__getopt_initialized' declared here
int __getopt_initialized;
    ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:1086:7: error: use of undeclared identifier '_getopt_initialized'
if ( !_getopt_initialized ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:1097:1: error: use of undeclared identifier 'v10'
v10 = ordering; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:1110:6: error: use of undeclared identifier 'v10'
if ( v10 == PERMUTE ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/utils/getopt.c:1181:6: error: use of undeclared identifier 'v10'
if ( v10 ) 
     ^
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/getopt_internal/src/obj/5/getopt.o] Error 1
